# minmax_vrp_project

./: .gitignore  README.md  main.py  parser.py  pyproject.toml  run.py  submission.py
data/: README.md  validation_summary.csv
data/cvrplib_converted/: A-n60-k9.txt  P-n101-k4.txt  README.md  X-n1001-k43.txt  X-n251-k28.txt  X-n459-k26.txt  X-n749-k98.txt
data/hustack/: README.md  tc1.txt  tc10.txt  tc12.txt  tc2.txt  tc3.txt  tc4.txt  tc6.txt
data/mtsplib_minmax/: README.md  berlin52_k2.txt  eil51_k7.txt  eil76_k3.txt  eil76_k5.txt  rat99_k2.txt  rat99_k5.txt  rat99_k7.txt  reference_all.csv
data/raw/: README.md
data/splits/: README.md  optional_k_sensitivity.txt  raw_cvrplib.txt  raw_tsplib_sqrtk.txt  test_seed02_seed03.txt  tuning_seed01.txt
data/tsplib_converted/: README.md  ch130_k10.txt  eil51_k2.txt  kroA200_k20.txt
docs/: OUTPUTS.md  RUNNERS.md  TESTS.md
minmax_vrp/: STRUCTURE.md  __init__.py  cli.py  io.py  models.py
output/: README.md
outputs/: README.md
scripts/: README.md  analyze_algorithm_comparison_report.py  analyze_alns_tuning_report.py  benchmark_data_utils.py  build_hustack_reference.py  build_mtsplib_reference_from_tours.py  compare_best_algorithm_results.py  download_raw_benchmarks.py  generate_generated_data.py  install_report_benchmarks.py  run_algorithm_benchmarks.py  run_single_algorithm.py  test_best_algorithm.py  tune_alns_configs.py  tune_tabu_configs.py  validate_data_pipeline.py
tests/: README.md  test_algorithms_smoke.py  test_alns_correctness.py  test_benchmark_helpers.py  test_io_models.py  test_parser.py
(+334 files in other folders)
